--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -8,7 +8,7 @@ h1 {
     font-weight: 400;
 }
 
-p {
+p, a {
     font-size: 1.5rem;
 }
 
@@ -20,5 +20,31 @@ a {
     color: white;
     &:hover {
         opacity: 0.7;
+    }
+}
+
+// Tablet
+@media only screen and (max-width: 1024px) {
+    h1 {
+        font-size: 2.75rem;
+    }
+    p, a {
+        font-size: 1.25rem;
+    }
+    label {
+        font-size: 0.9rem;
+    }
+}
+
+//Smartphone
+@media (max-width: 600px) {
+    h1 {
+        font-size: 2.50rem;
+    }
+    p, a {
+        font-size: 1rem;
+    }
+    label {
+        font-size: 0.8rem;
     }
 }
