--- a/assets/sass/components/_button.scss
+++ b/assets/sass/components/_button.scss
@@ -28,3 +28,17 @@
     height: 1.5rem;
     background: none;
 }
+
+// Tablet
+@media only screen and (max-width: 1024px) {
+    .button-primary {
+        font-size: 1.25rem;
+    }
+}
+
+//Smartphone
+@media (max-width: 600px) {
+    .button-primary {
+        font-size: 1rem;
+    }
+}
