--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,7 +29,7 @@ h1 {
   font-weight: 400;
 }
 
-p {
+p, a {
   font-size: 1.5rem;
 }
 
@@ -44,6 +44,28 @@ a:hover {
   opacity: 0.7;
 }
 
+@media only screen and (max-width: 1024px) {
+  h1 {
+    font-size: 2.75rem;
+  }
+  p, a {
+    font-size: 1.25rem;
+  }
+  label {
+    font-size: 0.9rem;
+  }
+}
+@media (max-width: 600px) {
+  h1 {
+    font-size: 2.5rem;
+  }
+  p, a {
+    font-size: 1rem;
+  }
+  label {
+    font-size: 0.8rem;
+  }
+}
 .button-primary {
   height: 3rem;
   width: fit-content;
@@ -75,6 +97,16 @@ a:hover {
   background: none;
 }
 
+@media only screen and (max-width: 1024px) {
+  .button-primary {
+    font-size: 1.25rem;
+  }
+}
+@media (max-width: 600px) {
+  .button-primary {
+    font-size: 1rem;
+  }
+}
 .input-container {
   display: flex;
   flex-direction: row;
